--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".ValidatorActivity"></activity>
+        <activity android:name=".activity.ValidatorActivity"></activity>
     </application>
 
 </manifest>
